added nav items in branch navigation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+	<nav>
+		<ul>
+			<li>list item 1</li>
+			<li>list item 2</li>
+			<li>list item 3</li>
+			<li>list item 4</li>
+		</ul>
+	</nav>
 	<main class="main">
 		<h1>Bees
 		<svg width="100%" height="100%" viewBox="0 0 50" preserveAspectRatio="none">
