footer note added

--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia eius modi atque porro reprehenderit aperiam earum nemo dicta ipsa quibusdam unde in adipisci nulla at illum laborum vero, perspiciatis id enim repudiandae consectetur doloribus possimus laboriosam eos harum. Sed, sint. Veritatis molestias nesciunt, reiciendis unde eveniet dolorem enim cumque error?</p>
 	</main>
 	
+<!-- footer here -->
 </body>
 </html>
+
